syntax = "proto3";
option java_multiple_files = true;
package com.beyt.anouncy.common.v1;

message VoteSummaryRequest {
  string anonymousUserId = 1;
  string regionId = 2;
  repeated string announceIdList = 3;
}

message VoteSummaryPTO {
  string id = 1;
  bool value = 2;
  string announceId = 3;
}

message VoteSummaryListPTO {
  repeated VoteSummaryPTO voteSummaryList = 1;
}

message VoteCountSingleRequest {
  string regionId = 1;
  string announceId = 2;
}

enum RegionTypePTO {
  COUNTRY = 0;
  CITY = 1;
  COUNTY = 2;
}

enum RegionStatusPTO {
  ACTIVE = 0;
  INACTIVE = 1;
}

message RegionPTO {
  optional string id = 1;
  string name = 2;
  int32 ordinal = 3;
  double latitude = 4;
  double longitude = 5;
  int64 locationId = 6;
  RegionTypePTO type = 7;
  RegionStatusPTO status = 8;
  optional string parentRegionId = 9;
}

message LocationPTO {
  int64 id = 1;
  string name = 2;
  int32 ordinal = 3;
  double latitude = 4;
  double longitude = 5;
  RegionTypePTO type = 6;
  optional int64 parentLocationId = 7;
}

message VotePTO {
  optional string id = 1;
  bool value = 2;
  AnnouncePTO announce = 3;
  AnonymousUserPTO anonymousUser = 4;
  RegionPTO region = 5;
  int64 createDate = 6;
}

message AnnouncePTO {
  optional string id = 1;
  string body = 2;
  AnonymousUserPTO anonymousUser = 3;
  RegionPTO beginRegion = 4;
  RegionPTO currentRegion = 5;
  int64 createDate = 6;
}

message AnonymousUserPTO {
  string id = 1;
}

message AnnounceOptionalPTO {
  optional AnnouncePTO announce = 1;
}

message AnnounceListPTO {
  repeated AnnouncePTO announceList = 1;
}

message AnnouncePagePTO {
  repeated AnnouncePTO announceList = 1;
  PageablePTO pageable = 2;
  int64 totalElement = 3;
}

message VoteOptionalPTO {
  optional VotePTO vote = 1;
}

message VoteListPTO {
  repeated VotePTO voteList = 1;
}

message RegionOptionalPTO {
  optional RegionPTO region = 1;
}

message RegionListPTO {
  repeated RegionPTO regionList = 1;
}

message LocationOptionalPTO {
  optional LocationPTO location = 1;
}

message LocationListPTO {
  repeated LocationPTO locationList = 1;
}

message AnonymousUserOptionalPTO {
  optional AnonymousUserPTO anonymousUser = 1;
}

message AnonymousUserListPTO {
  repeated AnonymousUserPTO anonymousUserList = 1;
}

message VoteCountMultiRequest {
  string regionId = 1;
  repeated string announceIdList = 2;
}

message VoteCountPTO {
  string announceId = 1;
  int64 yes = 2;
  int64 no = 3;
  string currentRegionId = 4;
}

message IdLong {
  int64 id = 1;
}

message IdLongList {
  repeated IdLong idList = 1;
}

message IdStr {
  string id = 1;
}

message IdStrList {
  repeated IdStr idList = 1;
}

message VoteCountOptionalPTO {
  optional VoteCountPTO voteCount = 1;
}

message VoteCountListPTO {
  repeated VoteCountPTO voteCountList = 1;
}

message Count {
  int64 count = 1;
}

message Exist {
  bool exist = 1;
}

message Empty {

}

message IdWithPageable {
  string id = 1;
  PageablePTO pageable = 2;
}

message PageablePTO {
  int32 page = 1;
  int32 size = 2;
}

message AnnounceIdAndAnonymousUserId {
  string announceId = 1;
  string anonymousUserId = 2;
}

